# crewai-latest-ai-development

./: .dockerignore  .env_example  .gitignore  Dockerfile  Dockerfile.cli  README.md  docker-compose.yml  project_diagram.md  pyproject.toml  report.md
.github/workflows/: docker-publish.yml
src/latest_ai_development/: crew.py  main.py
