[project]
name = "latest_ai_development"
version = "0.1.0"
description = "latest-ai-development using crewAI"
authors = [{ name = "Tony Kipkemboi", email = "iamtonykipkemboi@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.37.28",
    "crewai[tools]>=0.108.0,<1.0.0",
    "litellm>=1.61.15"
]

[project.scripts]
latest_ai_development = "latest_ai_development.main:run"
run_crew = "latest_ai_development.main:run"
train = "latest_ai_development.main:train"
replay = "latest_ai_development.main:replay"
test = "latest_ai_development.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
